--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,38 +1,158 @@
+@import url("https://fonts.googleapis.com/css2?family=Rajdhani:wght@300;400&display=swap");
+
 * {
     margin: 0;
     padding: 0;
     font-size: 10px;
     box-sizing: border-box;
+    font-family: "Rajdhani", sans-serif;
 }
+
 header#busca {
     display: flex;
-    height: 250px;
-    justify-content: center;
-}
-form {
-    width: 100%;
-    display: flex;
-    flex-direction: row;
-    gap: 2rem;
     align-items: center;
     justify-content: center;
+    height: 100px;
+    background-color: #0078aa;
+}
+
+form {
+    width: 100%;
+    padding: 1rem;
+    display: flex;
+    flex-flow: row wrap;
+    align-items: center;
+    justify-content: space-evenly;
+    align-content: flex-start;
 }
 
 label {
     font-size: 3.5rem;
     text-transform: uppercase;
+    color: #ffffff;
 }
 
 input#cidade,
 input#uf {
     font-size: 1.4rem;
-    padding: 1rem;
+    padding: 1.5rem;
     outline: 0;
+    border: none;
+    background: #f6f6f6;
+    border-radius: 1rem;
+    box-shadow: 0px 0px 12px -3px #000000;
 }
+
 button#buscar {
-    width: 15%;
+    width: 140px;
+    padding: 1.4rem;
+    border: none;
+    background: #f6f6f6;
+    font-size: 1.4rem;
+    border-radius: 1rem;
+    font-weight: 600;
+    box-shadow: 0px 0px 12px -3px #000000;
+    transition: all 100ms;
+    cursor: pointer;
+}
+
+button#buscar:hover {
+    border-radius: 1.5rem;
+}
+
+main {
     padding: 1rem;
 }
-/* input:focus {
-    border: none;
-} */
+
+section {
+    display: none;
+    justify-content: center;
+    align-items: center;
+    height: 80vh;
+    padding: 3rem;
+    border-radius: 2rem;
+    box-shadow: 0px 0px 4px 0px #000000;
+    background-color: #18978f;
+}
+
+div#container {
+    width: 65%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+}
+
+h2#container_titulo-texto {
+    text-align: center;
+    font-size: 5rem;
+    color: #f6f6f6;
+    text-transform: uppercase;
+}
+
+div#container_card-cima {
+    display: flex;
+    gap: 2rem;
+    justify-content: center;
+    align-items: center;
+}
+
+div#container_card-clima {
+    display: flex;
+    align-items: center;
+    gap: 4rem;
+    border-right: 1px solid #ffffff;
+    padding-right: 2rem;
+}
+
+div#container_card-clima i {
+    font-size: 7rem;
+}
+
+i.bi-brightness-high {
+    color: #ff9f29;
+}
+
+i.bi-cloud-rain {
+    color: #413f42;
+}
+
+i.bi-cloud-sun {
+    color: #112b3c;
+}
+
+div#container_card-clima p {
+    font-size: 6.5rem;
+    color: #f9f2ed;
+    font-weight: bolder;
+}
+
+div#container_card-temperatura {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    color: #f9f2ed;
+}
+
+div#container_card-temperatura p {
+    font-size: 4rem;
+    font-weight: bolder;
+}
+
+div#container_card-baixo {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+div.container_card-descricao {
+    display: flex;
+    flex-direction: column;
+    gap: 1.5rem;
+}
+
+div.container_card-descricao p {
+    color: #f6f6f6;
+    font-size: 3rem;
+    font-weight: lighter;
+}
